ball animation added through out the website

--- a/content.html
+++ b/content.html
@@ -351,6 +351,7 @@
                 <!-- vertical videoo -->
 
                 <!-- banner -->
+
                 <div class="container">
                     <h1 class="mil-mb-60">Website <span class="mil-thin">Design</span><br> and <span
                             class="mil-thin">Development</span></h1>
@@ -363,6 +364,12 @@
 
                 <!-- service -->
                 <section id="service" class="bg-white">
+                    <div class="mil-animation-frame">
+                        <div class="mil-animation mil-position-1 mil-dark-bg mil-scale" data-value-1="2.4"
+                            data-value-2="1.4" style="top: 300px; right: -100px"></div>
+                        <div class="mil-animation mil-position-2 mil-dark-bg mil-scale" data-value-1="2"
+                            data-value-2="1" style="left: -100px;top: 100px;"></div>
+                    </div>
                     <div class="container mil-p-120-90">
                         <div class="row justify-content-between">
                             <div class="col-lg-4 mil-relative mil-mb-90">
@@ -515,23 +522,37 @@
 
                 <!-- prices -->
                 <section class="bg-white">
+                    <div class="mil-animation-frame">
+                        <div class="mil-animation mil-position-1 mil-dark-bg mil-scale" data-value-1="2.4"
+                            data-value-2="1.4" style="top: 300px; right: -100px"></div>
+                            <div class="mil-animation mil-position-2 mil-dark-bg mil-scale" data-value-1="2"
+                            data-value-2="1" style="left: -100px;top: 100px;"></div>
+                            <div class="mil-animation mil-position-1 mil-dark-bg mil-scale" data-value-1="2.4"
+                                data-value-2="1.4" style="top: 1300px; right: -100px"></div>
+                        </div>
                     <div class="mi-invert-fix">
                         <div class="container mil-p-120-120">
                             <div class="mil-center">
-                                <h2 class=" mil-up mil-mb-30 mil-center">Reasonable <span class="mil-thin">prices</span> <br>for innovative <span class="mil-thin">solutions</span></h2>
-                                <p class=" mil-up mil-mb-120">At our agency, we have a unique approach to web design and development. <br>We believe in creating in terms of user experience, functionality.</p>
+                                <h2 class=" mil-up mil-mb-30 mil-center">Reasonable <span class="mil-thin">prices</span>
+                                    <br>for innovative <span class="mil-thin">solutions</span></h2>
+                                <p class=" mil-up mil-mb-120">At our agency, we have a unique approach to web design and
+                                    development. <br>We believe in creating in terms of user experience, functionality.
+                                </p>
                             </div>
 
-                            <a href="contact.html" class="mil-price-card mil-price-card-wbg mil-choose mil-accent-cursor mil-up">
+                            <a href="contact.html"
+                                class="mil-price-card mil-price-card-wbg mil-choose mil-accent-cursor mil-up">
                                 <div class="row align-items-center">
                                     <div class="col-lg-2">
-                                        <div class="mil-price-number mil-mb-30"><span class=" mil-thin">$</span><span class="mil-accent">19</span></div>
+                                        <div class="mil-price-number mil-mb-30"><span class=" mil-thin">$</span><span
+                                                class="mil-accent">19</span></div>
                                     </div>
                                     <div class="col-lg-4">
                                         <h5 class=" mil-mb-30">Tailored Designs for<br> Every Budget</h5>
                                     </div>
                                     <div class="col-lg-4">
-                                        <p class=" mil-mb-30">Tomlo commodi, mollitia atque betae esse itaque a, voluptatibus, suscipit beatae officiis omnis.</p>
+                                        <p class=" mil-mb-30">Tomlo commodi, mollitia atque betae esse itaque a,
+                                            voluptatibus, suscipit beatae officiis omnis.</p>
                                     </div>
                                     <div class="col-lg-2">
                                         <div class="mil-adaptive-right mil-mb-30">
@@ -543,13 +564,15 @@
                             <a href="contact.html" class="mil-price-card mil-choose mil-accent-cursor mil-up">
                                 <div class="row align-items-center">
                                     <div class="col-lg-2">
-                                        <div class="mil-price-number mil-mb-30"><span class=" mil-thin">$</span><span class="mil-accent">29</span></div>
+                                        <div class="mil-price-number mil-mb-30"><span class=" mil-thin">$</span><span
+                                                class="mil-accent">29</span></div>
                                     </div>
                                     <div class="col-lg-4">
                                         <h5 class=" mil-mb-30">Inspiring and Customized <br> Design Solutions</h5>
                                     </div>
                                     <div class="col-lg-4">
-                                        <p class=" mil-mb-30">Tomlo commodi, mollitia atque betae esse itaque a, voluptatibus, suscipit beatae officiis omnis.</p>
+                                        <p class=" mil-mb-30">Tomlo commodi, mollitia atque betae esse itaque a,
+                                            voluptatibus, suscipit beatae officiis omnis.</p>
                                     </div>
                                     <div class="col-lg-2">
                                         <div class="mil-adaptive-right mil-mb-30">
@@ -558,16 +581,20 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="contact.html" class="mil-price-card mil-price-card-wbg mil-choose mil-accent-cursor mil-up">
+                            <a href="contact.html"
+                                class="mil-price-card mil-price-card-wbg mil-choose mil-accent-cursor mil-up">
                                 <div class="row align-items-center">
                                     <div class="col-lg-2">
-                                        <div class="mil-price-number mil-mb-30"><span class=" mil-thin">$</span><span class="mil-accent">49</span></div>
+                                        <div class="mil-price-number mil-mb-30"><span class=" mil-thin">$</span><span
+                                                class="mil-accent">49</span></div>
                                     </div>
                                     <div class="col-lg-4">
-                                        <h5 class=" mil-mb-30">Unleashing the Beauty of Space <br> with Unique Designs</h5>
+                                        <h5 class=" mil-mb-30">Unleashing the Beauty of Space <br> with Unique Designs
+                                        </h5>
                                     </div>
                                     <div class="col-lg-4">
-                                        <p class=" mil-mb-30">Tomlo commodi, mollitia atque betae esse itaque a, voluptatibus, suscipit beatae officiis omnis.</p>
+                                        <p class=" mil-mb-30">Tomlo commodi, mollitia atque betae esse itaque a,
+                                            voluptatibus, suscipit beatae officiis omnis.</p>
                                     </div>
                                     <div class="col-lg-2">
                                         <div class="mil-adaptive-right mil-mb-30">
@@ -579,13 +606,16 @@
                             <a href="contact.html" class="mil-price-card mil-choose mil-accent-cursor mil-up mil-mb-60">
                                 <div class="row align-items-center">
                                     <div class="col-lg-2">
-                                        <div class="mil-price-number mil-mb-30"><span class=" mil-thin">$</span><span class="mil-accent">199</span></div>
+                                        <div class="mil-price-number mil-mb-30"><span class=" mil-thin">$</span><span
+                                                class="mil-accent">199</span></div>
                                     </div>
                                     <div class="col-lg-4">
-                                        <h5 class=" mil-mb-30">Exquisite Design Concepts <br> for Discerning Clients</h5>
+                                        <h5 class=" mil-mb-30">Exquisite Design Concepts <br> for Discerning Clients
+                                        </h5>
                                     </div>
                                     <div class="col-lg-4">
-                                        <p class=" mil-mb-30">Tomlo commodi, mollitia atque betae esse itaque a, voluptatibus, suscipit beatae officiis omnis.</p>
+                                        <p class=" mil-mb-30">Tomlo commodi, mollitia atque betae esse itaque a,
+                                            voluptatibus, suscipit beatae officiis omnis.</p>
                                     </div>
                                     <div class="col-lg-2">
                                         <div class="mil-adaptive-right mil-mb-30">
@@ -622,6 +652,14 @@
                                         data-value-2="1.4" style="top: 300px; right: -100px"></div>
                                     <div class="mil-animation mil-position-2 mil-dark-bg mil-scale" data-value-1="2"
                                         data-value-2="1" style="left: -100px;top: 100px;"></div>
+                                    <div class="mil-animation mil-position-1 mil-dark-bg mil-scale" data-value-1="2.4"
+                                        data-value-2="1.4" style="top: 1500px; right: -100px"></div>
+                                    <div class="mil-animation mil-position-2 mil-dark-bg mil-scale" data-value-1="2"
+                                        data-value-2="1" style="left: -100px;top: 1300px;"></div>
+                                    <div class="mil-animation mil-position-1 mil-dark-bg mil-scale" data-value-1="2.4"
+                                        data-value-2="1.4" style="top: 2400px; right: -100px"></div>
+                                    <div class="mil-animation mil-position-2 mil-dark-bg mil-scale" data-value-1="2"
+                                        data-value-2="1" style="left: -100px;top: 2200px;"></div>
                                 </div>
 
                                 <div class="timeline_item" data-w-id="43c3ed43-6ac2-b500-6d6f-92990686a3d4">
@@ -680,7 +718,6 @@
                                         </div>
                                     </div>
                                 </div>
-
 
                                 <div data-w-id="43c3ed43-6ac2-b500-6d6f-92990686a3f6" class="timeline_item">
                                     <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3f7-0686a3cd"
