--- a/design.html
+++ b/design.html
@@ -497,6 +497,14 @@
                                     data-value-2="1.4" style="top: 300px; right: -100px"></div>
                                 <div class="mil-animation mil-position-2 mil-dark-bg mil-scale" data-value-1="2"
                                     data-value-2="1" style="left: -100px;top: 100px;"></div>
+                                <div class="mil-animation mil-position-1 mil-dark-bg mil-scale" data-value-1="2.4"
+                                    data-value-2="1.4" style="top: 1500px; right: -100px"></div>
+                                <div class="mil-animation mil-position-2 mil-dark-bg mil-scale" data-value-1="2"
+                                    data-value-2="1" style="left: -100px;top: 1300px;"></div>
+                                <div class="mil-animation mil-position-1 mil-dark-bg mil-scale" data-value-1="2.4"
+                                    data-value-2="1.4" style="top: 2400px; right: -100px"></div>
+                                <div class="mil-animation mil-position-2 mil-dark-bg mil-scale" data-value-1="2"
+                                    data-value-2="1" style="left: -100px;top: 2200px;"></div>
                             </div>
 
                             <div class="timeline_item" data-w-id="43c3ed43-6ac2-b500-6d6f-92990686a3d4">
@@ -511,11 +519,12 @@
                                 <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3d9-0686a3cd"
                                     class="timeline_right">
                                     <div class="margin-bottom-xlarge">
-                                        <div class="timeline_text">Contact us for personalized guidance and share your culinary vision with our expert team.</div>
+                                        <div class="timeline_text">Contact us for personalized guidance and share
+                                            your culinary vision with our expert team.</div>
                                     </div>
                                 </div>
                             </div>
-                            
+
 
 
                             <div data-w-id="43c3ed43-6ac2-b500-6d6f-92990686a3e0" class="timeline_item">
@@ -529,7 +538,9 @@
                                 </div>
                                 <div class="timeline_right">
                                     <div class="margin-bottom-medium">
-                                        <div class="timeline_text">We then get you on a discovery call to have a discussion about your aspirations. We'll provide a focused approach to brand-building, ensuring your culinary vision comes to life.<br>
+                                        <div class="timeline_text">We then get you on a discovery call to have a
+                                            discussion about your aspirations. We'll provide a focused approach to
+                                            brand-building, ensuring your culinary vision comes to life.<br>
                                         </div>
                                     </div>
                                 </div>
@@ -545,13 +556,14 @@
                                 </div>
                                 <div class="timeline_right">
                                     <div class="margin-bottom-medium">
-                                        <div class="timeline_text">Find out the time and budget details customized to your project. We'll work closely with you to ensure every aspect is carefully considered..<br>
+                                        <div class="timeline_text">Find out the time and budget details customized
+                                            to your project. We'll work closely with you to ensure every aspect is
+                                            carefully considered..<br>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-
-
+                    
                             <div data-w-id="43c3ed43-6ac2-b500-6d6f-92990686a3f6" class="timeline_item">
                                 <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3f7-0686a3cd"
                                     class="timeline_left">
@@ -563,7 +575,8 @@
                                 </div>
                                 <div class="timeline_right">
                                     <div class="margin-bottom-medium">
-                                        <div class="timeline_text">Our team puts together a proposal, moodboard, references and ensures it aligns perfectly with your vision.<br></div>
+                                        <div class="timeline_text">Our team puts together a proposal, moodboard,
+                                            references and ensures it aligns perfectly with your vision.<br></div>
                                     </div>
                                 </div>
                             </div>
@@ -579,7 +592,9 @@
                                 </div>
                                 <div class="timeline_right">
                                     <div class="margin-bottom-medium end">
-                                        <div class="timeline_text">Once payments and budgets are through, we'll guide you through every step, from concept to completion, ensuring your brand flourishes..<br>
+                                        <div class="timeline_text">Once payments and budgets are through, we'll
+                                            guide you through every step, from concept to completion, ensuring your
+                                            brand flourishes..<br>
                                         </div>
                                     </div>
                                 </div>
@@ -590,6 +605,7 @@
                     </div>
                 </div>
             </section>
+
 
             <script>
                 window.addEventListener('scroll', function () {
