color correction done to seperate the website

--- a/content.html
+++ b/content.html
@@ -521,7 +521,7 @@
                 <!-- service end -->
 
                 <!-- prices -->
-                <section class="bg-white">
+                <section style="background-color: whitesmoke;">
                     <div class="mil-animation-frame">
                         <div class="mil-animation mil-position-1 mil-dark-bg mil-scale" data-value-1="2.4"
                             data-value-2="1.4" style="top: 300px; right: -100px"></div>
