animated balls are added on hero section

--- a/home-1.html
+++ b/home-1.html
@@ -222,7 +222,14 @@
                 <!-- banner -->
                 <section class="mil-banner mil-soft-bg">
                     <div class="mi-invert-fix">
-                        
+                        <div class="mil-animation-frame">
+                            <div class="mil-animation mil-position-1 mil-dark-bg mil-scale" data-value-1="7"
+                                data-value-2="1.6"></div>
+                            <div class="mil-animation mil-position-2 mil-dark-bg mil-scale" data-value-1="4"
+                                data-value-2="1"></div>
+                            <div class="mil-animation mil-position-3 mil-dark-bg mil-scale" data-value-1="1.2"
+                                data-value-2=".1"></div>
+                        </div>
 
                         <div class="mil-gradient"></div>
 
@@ -562,8 +569,7 @@
                                     <h2 class="mil-h1 mil-maroon mil-center" style="font-size: 3rem;">Media <span
                                             class="mil-thin">Can Help You?</span></h2>
 
-                                    <a href="#"
-                                        class="mil-services-button mil-button mil-arrow-place"><span>What we
+                                    <a href="#" class="mil-services-button mil-button mil-arrow-place"><span>What we
                                             do</span></a>
 
                                 </div>
@@ -1132,7 +1138,7 @@
                                         </div>
                                     </div>
                                 </div>
-                        
+
                                 <div data-w-id="43c3ed43-6ac2-b500-6d6f-92990686a3f6" class="timeline_item">
                                     <div id="w-node-_43c3ed43-6ac2-b500-6d6f-92990686a3f7-0686a3cd"
                                         class="timeline_left">
