mobile friendly edit

--- a/home-1.html
+++ b/home-1.html
@@ -119,13 +119,13 @@
                         <div class="col-xl-7">
 
                             <div class="mil-menu-right-frame">
-                                <div class="mil-animation-in">
+                                <div class="mil-animation-in mil-tab-mobile">
                                     <div class="mil-animation-frame">
                                         <div class="mil-animation mil-position-1 mil-dark-bg mil-scale" data-value-1="2"
                                             data-value-2="2"></div>
                                     </div>
                                 </div>
-                                <div class="mil-menu-right">
+                                <div class="mil-menu-right mil-tab-mobile">
                                     <div class="row">
                                         <div class="col-lg-8 mil-mb-25">
 
@@ -225,10 +225,10 @@
                         <div class="mil-animation-frame">
                             <div class="mil-animation mil-position-1 mil-dark-bg mil-scale" data-value-1="7"
                                 data-value-2="1.6"></div>
-                            <div class="mil-animation mil-position-2 mil-dark-bg mil-scale" data-value-1="4"
+                            <div class="mil-animation mil-position-2 mil-dark-bg mil-scale mil-mobile-hidden" data-value-1="4"
                                 data-value-2="1"></div>
-                            <div class="mil-animation mil-position-3 mil-dark-bg mil-scale" data-value-1="1.2"
-                                data-value-2=".1"></div>
+                            <div class="mil-animation mil-position-3 mil-dark-bg mil-scale mil-mobile-hidden" data-value-1="1.2"
+                                data-value-2="1"></div>
                         </div>
 
                         <div class="mil-gradient"></div>
@@ -291,7 +291,7 @@
 
 
                 <!-- portfolio -->
-                <section class="mil-portfolio-slider-frame" id="projects">
+                <section class="mil-portfolio-slider-frame mil-portfolio-slider-frame-home p-0" id="projects">
                     <div class="mil-animation-frame">
                         <div class="mil-animation mil-position-4 mil-maroon mil-scale" data-value-1="1" data-value-2="2"
                             style="top: -60px; right: -4px;"></div>
@@ -539,9 +539,9 @@
                 <section class="mil-soft-bg">
                     <div class="mi-invert-fix">
                         <div class="mil-animation-frame">
-                            <div class="mil-animation mil-position-1 mil-dark-bg mil-scale" data-value-1="2.4"
+                            <div class="mil-animation mil-position-1 mil-dark-bg mil-scale mil-mobile-hidden" data-value-1="2.4"
                                 data-value-2="1.4" style="top: 300px; right: -100px"></div>
-                            <div class="mil-animation mil-position-2 mil-dark-bg mil-scale" data-value-1="2"
+                            <div class="mil-animation mil-position-2 mil-dark-bg mil-scale mil-mobile-hidden" data-value-1="2"
                                 data-value-2="1" style="left: -100px;top: 100px;"></div>
                         </div>
                         <div class="container mil-p-120-0">
@@ -1067,7 +1067,7 @@
                                     <div class="timeline_progress-bar"></div>
                                 </div>
 
-                                <div class="mil-animation-frame">
+                                <div class="mil-animation-frame mil-tab-mobile">
                                     <div class="mil-animation mil-position-1 mil-dark-bg mil-scale" data-value-1="2.4"
                                         data-value-2="1.4" style="top: 300px; right: -100px"></div>
                                     <div class="mil-animation mil-position-2 mil-dark-bg mil-scale" data-value-1="2"
