--- a/design.html
+++ b/design.html
@@ -141,7 +141,7 @@
 
                             <div class="mil-menu-right-frame">
                                 <div class="mil-animation-in">
-                                    <div class="mil-animation-frame">
+                                    <div class="mil-animation-frame mil-tab-mobile">
                                         <div class="mil-animation mil-position-1 mil-dark-bg mil-scale" data-value-1="2"
                                             data-value-2="2"></div>
                                     </div>
@@ -492,7 +492,7 @@
                                 <div class="timeline_progress-bar"></div>
                             </div>
 
-                            <div class="mil-animation-frame">
+                            <div class="mil-animation-frame mil-tab-mobile">
                                 <div class="mil-animation mil-position-1 mil-dark-bg mil-scale" data-value-1="2.4"
                                     data-value-2="1.4" style="top: 300px; right: -100px"></div>
                                 <div class="mil-animation mil-position-2 mil-dark-bg mil-scale" data-value-1="2"
