worked on the size of the navbar seciton

--- a/content.html
+++ b/content.html
@@ -353,7 +353,7 @@
                 <!-- banner -->
 
                 <div class="container">
-                    <h1 class="mil-mb-60">Website <span class="mil-thin">Design</span><br> and <span
+                    <h1 class="mil-mb-60 mil-maroon">Website <span class="mil-thin">Design</span><br> and <span
                             class="mil-thin">Development</span></h1>
                     <a href="#service" class="mil-link mil-dark mil-arrow-place mil-down-arrow">
                         <span>About service</span>
@@ -374,7 +374,7 @@
                         <div class="row justify-content-between">
                             <div class="col-lg-4 mil-relative mil-mb-90">
 
-                                <h4 class="mil-up mil-mb-30">Your <span class="mil-thin">Approach</span> <br>and <span
+                                <h4 class="mil-up mil-mb-30 mil-maroon">Your <span class="mil-thin">Approach</span> <br>and <span
                                         class="mil-thin">Work Specifics</span></h4>
                                 <p class="mil-up mil-mb-30">At our agency, we have a unique approach to web design and
                                     development. We believe in creating websites that not only look great but also
