fof changes part-2

--- a/contact.html
+++ b/contact.html
@@ -140,17 +140,17 @@
                         <div class="col-xl-7">
 
                             <div class="mil-menu-right-frame">
-                                <div class="mil-animation-in">
+                                <div class="mil-animation-in mil-tab-mobile">
                                     <div class="mil-animation-frame">
                                         <div class="mil-animation mil-position-1 mil-dark-bg mil-scale" data-value-1="2"
                                             data-value-2="2"></div>
                                     </div>
                                 </div>
-                                <div class="mil-menu-right">
+                                <div class="mil-menu-right mil-tab-mobile">
                                     <div class="row">
-                                        <div class="col-lg-8 mil-mb-60">
+                                        <div class="col-lg-8 mil-mb-25">
 
-                                            <h6 class="mil-dark mil-mb-30">Projects</h6>
+                                            <h6 class="mil-maroon mil-mb-30">Projects</h6>
 
                                             <ul class="mil-menu-list">
                                                 <li><a href="#." class="mil-light-dark">Interior design
@@ -168,9 +168,9 @@
                                             </ul>
 
                                         </div>
-                                        <div class="col-lg-4 mil-mb-60">
+                                        <div class="col-lg-4 mil-mb-25">
 
-                                            <h6 class="mil-dark mil-mb-30">Useful links</h6>
+                                            <h6 class="mil-maroon mil-mb-30">Useful links</h6>
 
                                             <ul class="mil-menu-list">
                                                 <li><a href="#." class="mil-light-dark">Privacy Policy</a></li>
@@ -181,12 +181,12 @@
 
                                         </div>
                                     </div>
-                                    <div class="mil-divider mil-mb-60"></div>
+                                    <div class="mil-divider mil-mb-25"></div>
                                     <div class="row justify-content-between">
 
                                         <div class="col-lg-4 mil-mb-60">
 
-                                            <h6 class="mil-dark mil-mb-30">Canada</h6>
+                                            <h6 class="mil-maroon mil-mb-30">Canada</h6>
 
                                             <p class="mil-light-dark mil-up">71 South Los Carneros Road, California
                                                 <span class="mil-no-wrap">+51 174 705 812</span>
@@ -195,7 +195,7 @@
                                         </div>
                                         <div class="col-lg-4 mil-mb-60">
 
-                                            <h6 class="mil-dark mil-mb-30">Germany</h6>
+                                            <h6 class="mil-maroon mil-mb-30">Germany</h6>
 
                                             <p class="mil-light-dark">Leehove 40, 2678 MC De Lier, Netherlands <span
                                                     class="mil-no-wrap">+31 174 705 811</span></p>
@@ -249,7 +249,7 @@
                                 <li><a href="home-1.html">Homepage</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul> -->
-                            <h1 class="mil-mb-60 mil-maroon">Get in touch!</h1>
+                            <h1 class="mil-mb-60 mil-mt-120 mil-maroon">Get in touch!</h1>
                             <!-- <a href="#contact" class="mil-link mil-maroon mil-arrow-place mil-down-arrow">
                         <span>Send message</span>
                     </a> -->
@@ -410,39 +410,40 @@
 
 
                 <!-- map -->
-                <div class="mil-map-frame mil-up">
+                <!-- <div class="mil-map-frame mil-up">
                     <div class="mil-map">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1396.5769090312324!2d-73.6519672!3d45.5673453!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc91f8abc30e0ff%3A0xfc6d9cbb49022e9c!2sManoir%20Saint-Joseph!5e0!3m2!1sen!2sua!4v1685485811069!5m2!1sen!2sua"
                             style="border:0;" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
-                </div>
+                </div> -->
                 <!-- map end -->
 
                 <!-- footer -->
                 <footer class="footer8">
                     <div class="container8">
-                        <div class="footer_logo8"><img class="img8" src="img/base/FNF LOGO NEW.png" alt=""></div>
-                        <!-- <a href="#." class="brand8">Brand</a> -->
-                        <ul class="menu8">
-                            <li><a href="">Home</a></li>
-                            <li><a href="">Design</a></li>
-                            <li><a href="">Content</a></li>
-                            <li><a href="">Consult</a></li>
-                        </ul>
+                        <div class="footer_logo8"><img class="img8" src="img/base/FNF LOGO NEW.png" alt="">
+                        </div>
                         <ul class="media-icons8">
                             <li><a href=""><i class="fab fa-facebook"></i></a></li>
                             <li><a href=""><i class="fab fa-twitter"></i></a></li>
                             <li><a href=""><i class="fab fa-instagram"></i></a></li>
                             <li><a href=""><i class="fab fa-linkedin"></i></a></li>
                         </ul>
-                        <p class="footer_adr">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Vel asperiores illum natus velit dolore perspiciatis, eum obcaecati,
-                            expedita molestiae voluptatibus corporis et eos cum quam nemo excepturi.
-                        </p>
+                        <div class="footer_adr">
+                            Office #802, SIT Tower, Dubai Silicon Oasis, Dubai, United Arab Emirates
+                            <br>
+                            <div class="txt-thin mil-maroon"><i class="fa-solid fa-phone"></i> 971 4 587 4633
+                                <br>
+                                <i class="fa-solid fa-envelope-circle-check"></i>
+                                info@foodonfocus.com
+                            </div>
+                        </div>
+
+
                     </div>
+                    <p id="copywright-p">All Rights Reserved | Copyright© foodonfocus.com 2024</p>
                 </footer>
                 <!-- footer end -->
 
