--- a/home-1.html
+++ b/home-1.html
@@ -631,28 +631,9 @@
                 </section>
                 <!-- services end -->
 
-                <!-- Timeline start -->
-
-
-
-
-
-
-                <!-- Timeline end -->
-
-                <!-- projects -->
-                <div class="mil-content">
-                    <div id="swupMain" class="mil-main-transition">
-
-
-
-                    </div>
-                </div>
-                <!-- projects end -->
-
                 <!-- team -->
                 <section>
-                    <div class="container mil-p-120-30">
+                    <div class="container mil-p-120-30" id="meetOurTeam">
                         <div class="row justify-content-between align-items-center">
                             <div class="col-lg-5 col-xl-4">
 
