--- a/design.html
+++ b/design.html
@@ -140,17 +140,17 @@
                         <div class="col-xl-7">
 
                             <div class="mil-menu-right-frame">
-                                <div class="mil-animation-in">
-                                    <div class="mil-animation-frame mil-tab-mobile">
+                                <div class="mil-animation-in mil-tab-mobile">
+                                    <div class="mil-animation-frame">
                                         <div class="mil-animation mil-position-1 mil-dark-bg mil-scale" data-value-1="2"
                                             data-value-2="2"></div>
                                     </div>
                                 </div>
-                                <div class="mil-menu-right">
+                                <div class="mil-menu-right mil-tab-mobile">
                                     <div class="row">
-                                        <div class="col-lg-8 mil-mb-60">
+                                        <div class="col-lg-8 mil-mb-25">
 
-                                            <h6 class="mil-dark mil-mb-30">Projects</h6>
+                                            <h6 class="mil-maroon mil-mb-30">Projects</h6>
 
                                             <ul class="mil-menu-list">
                                                 <li><a href="#." class="mil-light-dark">Interior design
@@ -168,9 +168,9 @@
                                             </ul>
 
                                         </div>
-                                        <div class="col-lg-4 mil-mb-60">
+                                        <div class="col-lg-4 mil-mb-25">
 
-                                            <h6 class="mil-dark mil-mb-30">Useful links</h6>
+                                            <h6 class="mil-maroon mil-mb-30">Useful links</h6>
 
                                             <ul class="mil-menu-list">
                                                 <li><a href="#." class="mil-light-dark">Privacy Policy</a></li>
@@ -181,12 +181,12 @@
 
                                         </div>
                                     </div>
-                                    <div class="mil-divider mil-mb-60"></div>
+                                    <div class="mil-divider mil-mb-25"></div>
                                     <div class="row justify-content-between">
 
                                         <div class="col-lg-4 mil-mb-60">
 
-                                            <h6 class="mil-dark mil-mb-30">Canada</h6>
+                                            <h6 class="mil-maroon mil-mb-30">Canada</h6>
 
                                             <p class="mil-light-dark mil-up">71 South Los Carneros Road, California
                                                 <span class="mil-no-wrap">+51 174 705 812</span>
@@ -195,7 +195,7 @@
                                         </div>
                                         <div class="col-lg-4 mil-mb-60">
 
-                                            <h6 class="mil-dark mil-mb-30">Germany</h6>
+                                            <h6 class="mil-maroon mil-mb-30">Germany</h6>
 
                                             <p class="mil-light-dark">Leehove 40, 2678 MC De Lier, Netherlands <span
                                                     class="mil-no-wrap">+31 174 705 811</span></p>
